<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="30dp"
    android:background="@color/white"
    tools:context=".User_choice">

    <TextView
        android:layout_width="186dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/welcome"
        android:textColor="@color/black"
        android:textSize="22sp" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/intro"
        android:layout_marginTop="20dp"
        android:textColor="@color/black"
        android:textSize="18sp" />

    <RadioGroup
        android:id="@+id/radiogroup"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:orientation="vertical">

        <RadioButton
            android:id="@+id/rdb_lawyer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/radiobutton_lawyer"
            android:textColor="@color/black"
            android:textSize="20sp"/>

        <RadioButton
            android:id="@+id/rdb_client"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/radiobutton_client"
            android:textColor="@color/black"
            android:textSize="20sp"/>
    </RadioGroup>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/app_intro"
        android:layout_marginTop="20dp"
        android:textColor="@color/black"
        android:textSize="18sp" />

</LinearLayout>