<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="30dp"
    android:background="@color/white"
    tools:context=".login">

    <ImageView
        android:layout_width="189dp"
        android:layout_height="159dp"
        android:layout_gravity="center"
        android:src="@drawable/login"
        android:contentDescription="@string/content_login_pic" />

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:focusable="true"
        android:focusableInTouchMode="true"
        android:textColorHint="#CC7F0C"
        >

        <EditText
            android:id="@+id/login_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/login_email"
            android:textSize="18sp"
            android:inputType="textEmailAddress"
            android:textColor="@color/black"
            android:background="#F7FDFB"
            android:importantForAutofill="no" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:background="@color/black"
        android:focusable="true"
        android:focusableInTouchMode="true"
        android:textColorHint="#CC7F0C"
        app:passwordToggleEnabled="true"
        app:passwordToggleTint="#CC7F0C">

        <EditText
            android:id="@+id/login_pass"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#F7FDFB"
            android:hint="@string/login_password"
            android:importantForAutofill="no"
            android:inputType="textPassword"
            android:textColor="@color/black"
            android:textSize="18sp" />
    </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/btn_login"
            android:layout_width="285dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="40dp"
            android:textColor="@color/black"
            android:background="@drawable/button"
            android:text="@string/btn_login" />

        <Button
            android:id="@+id/btn_logi_reg"
            android:layout_width="285dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="5dp"
            android:textColor="@color/black"
            android:background="@drawable/button"
            android:text="@string/btn_lgnreg" />



</LinearLayout>