<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:padding="30dp"
    android:background="@color/white"
    tools:context=".Client_signup">

<ScrollView
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:ignore="UselessParent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        >

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:focusable="true"
            android:focusableInTouchMode="true"
            android:textColorHint="#CC7F0C"
            >

            <EditText
                android:id="@+id/cli_name"
                android:background="#F7FDFB"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/cl_full_name"
                android:textSize="18sp"
                android:inputType="text"
                android:textColor="@color/black"
                android:importantForAutofill="no" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:focusable="true"
            android:focusableInTouchMode="true"
            android:textColorHint="#CC7F0C"
            >

            <EditText
                android:id="@+id/cli_email"
                android:layout_width="match_parent"
                android:background="#F7FDFB"
                android:layout_height="wrap_content"
                android:hint="@string/cl_email"
                android:textSize="18sp"
                android:inputType="textEmailAddress"
                android:textColor="@color/black"
                android:importantForAutofill="no" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:focusable="true"
            android:focusableInTouchMode="true"
            android:textColorHint="#CC7F0C"
            app:passwordToggleEnabled="true"
            app:passwordToggleTint="#CC7F0C"
            >

            <EditText
                android:id="@+id/cli_pass"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="#F7FDFB"
                android:hint="@string/cl_password"
                android:importantForAutofill="no"
                android:inputType="textPassword"
                android:textColor="@color/black"
                android:textSize="18sp" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:focusable="true"
            android:focusableInTouchMode="true"
            android:textColorHint="#CC7F0C"
            app:passwordToggleEnabled="true"
            app:passwordToggleTint="#CC7F0C"
            >

            <EditText
                android:id="@+id/cli_cnf"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="#F7FDFB"
                android:hint="@string/cl_confirm_password"
                android:textSize="18sp"
                android:inputType="textPassword"
                android:importantForAutofill="no"
                android:textColor="@color/black"

                />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:focusable="true"
            android:focusableInTouchMode="true"
            android:textColorHint="#CC7F0C"
            >

            <EditText
                android:id="@+id/cli_phone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/cl_phone_no"
                android:background="#F7FDFB"
                android:textSize="18sp"
                android:inputType="number"
                android:importantForAutofill="no"
                android:textColor="@color/black"
                tools:ignore="TextFields" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:focusable="true"
            android:focusableInTouchMode="true"
            android:textColorHint="#CC7F0C"
            >

            <EditText
                android:id="@+id/cli_city"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/cl_city"
                android:background="#F7FDFB"
                android:textSize="18sp"
                android:inputType="text"
                android:importantForAutofill="no"
                android:textColor="@color/black"
                />

        </com.google.android.material.textfield.TextInputLayout>


        <Button
            android:id="@+id/btn_cli_reg"
            android:layout_width="285dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="40dp"
            android:focusableInTouchMode="false"
            android:text="@string/cl_btn_register"
            android:background="@drawable/button"
            android:textColor="@color/black" />

    </LinearLayout>
</ScrollView>
</LinearLayout>